--- a/LibreriaClassi/LibreriaClassi.csproj
+++ b/LibreriaClassi/LibreriaClassi.csproj
@@ -41,9 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CORSI.cs" />
     <Compile Include="DB.cs" />
     <Compile Include="FACOLTA.cs" />
+    <Compile Include="PIANISTUDIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="STUDENTI.cs" />
+    <Compile Include="TIPICORSI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
