--- a/LibreriaClassi/LibreriaClassi.csproj
+++ b/LibreriaClassi/LibreriaClassi.csproj
@@ -44,8 +44,12 @@
     <Compile Include="CORSI.cs" />
     <Compile Include="APPELLI.cs" />
     <Compile Include="DB.cs" />
+    <Compile Include="DOCENTI.cs" />
     <Compile Include="ESAMI.cs" />
     <Compile Include="FACOLTA.cs" />
+    <Compile Include="LEZIONI.cs" />
+    <Compile Include="MATERIALI.cs" />
+    <Compile Include="PIANISTUDIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="STUDENTI.cs" />
     <Compile Include="TIPICORSI.cs" />
