--- a/Comunicazioni/appsettings.json
+++ b/Comunicazioni/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "MyConn": "Server=DESKTOP-KM2T7UL\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True",
+        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019\\\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*"
 }
