Aggiunte Classi: Prove, Test_DA, Test_DC.

--- a/LibreriaClassi/LibreriaClassi.csproj
+++ b/LibreriaClassi/LibreriaClassi.csproj
@@ -51,7 +51,10 @@
     <Compile Include="MATERIALI.cs" />
     <Compile Include="PIANISTUDIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PROVE.cs" />
     <Compile Include="STUDENTI.cs" />
+    <Compile Include="TEST_DA.cs" />
+    <Compile Include="TEST_DC.cs" />
     <Compile Include="TIPICORSI.cs" />
   </ItemGroup>
   <ItemGroup>
