--- a/LibreriaClassi/LibreriaClassi.csproj
+++ b/LibreriaClassi/LibreriaClassi.csproj
@@ -48,8 +48,11 @@
     <Compile Include="ESAMI.cs" />
     <Compile Include="FACOLTA.cs" />
     <Compile Include="LEZIONI.cs" />
+    <Compile Include="LIBRETTI.cs" />
     <Compile Include="MATERIALI.cs" />
+    <Compile Include="PAGAMENTI.cs" />
     <Compile Include="PIANISTUDIO.cs" />
+    <Compile Include="PIANISTUDIOPERSONALI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="STUDENTI.cs" />
     <Compile Include="TIPICORSI.cs" />
