Aggiunto DbContext e configurata connessione

--- a/AreaDocente/appsettings.json
+++ b/AreaDocente/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UniGenConn": "Server=DESKTOP-92I8GDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
