--- a/AreaDocente/AreaDocente.csproj
+++ b/AreaDocente/AreaDocente.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\LibreriaClassi\LibreriaClassi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Entities\" />
+  </ItemGroup>
+
 </Project>
