--- a/Comunicazioni/appsettings.json
+++ b/Comunicazioni/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MyConn": "Server=DESKTOP-KM2T7UL\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True",
+        "MyConn": "Server=DESKTOP-1FQT6B3\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True",
         "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019\\\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
     }
 }
