Collegamento DB 705G4DM (do not merge)
Collegamento adeguato per il mio pc

--- a/AreaDocente/appsettings.json
+++ b/AreaDocente/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UniGenConn": "Server=DESKTOP-92I8GDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+    "UniGenConn": "Server=DESKTOP-705G4DM\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
