--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Data Source = FABIO\\SQLEXPRESS; Initial Catalog=AUTOSALONI; Integrated Security=true" ";"
 }
