--- a/AreaStudente/AreaStudente.csproj
+++ b/AreaStudente/AreaStudente.csproj
@@ -18,4 +18,12 @@
     <ProjectReference Include="..\LibreriaClassi\LibreriaClassi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\resources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\resources\studenti-universitari.jpg" />
+  </ItemGroup>
+
 </Project>
