Tocco finale prima di proseguire

--- a/Comunicazioni/appsettings.json
+++ b/Comunicazioni/appsettings.json
@@ -8,5 +8,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019\\\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True",
+        "MyConn": "Server=DESKTOP-KM2T7UL\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
     }
 }
