inserito meccanismo di rec pwd

--- a/AreaStudente/AreaStudente.csproj
+++ b/AreaStudente/AreaStudente.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\LibreriaClassi\LibreriaClassi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\resources\" />
+  </ItemGroup>
+
 </Project>
