--- a/AreaAmministrazione/Web.config
+++ b/AreaAmministrazione/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="GENERATIONConnectionString" connectionString="Data Source=ANASTASIA-SACC\MSSQLSERVER01;Initial Catalog=GENERATION;Integrated Security=True;Encrypt=False"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
