--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Data Source = FABIO\\SQLEXPRESS; Initial Catalog=AUTOSALONI; Integrated Security=true" ";"
+  "ConnectionStrings": {
+    "UniGen_Prova_Conn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;"
+  }
 }
