--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UniGen_Prova_Conn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;"
   }
 }
