--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AteneoConn": "Server=FABIO\\SQLEXPRESS;Database=ATENEO;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;"
+  }
 }
