--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AteneoConn": "Server=FABIO\\SQLEXPRESS;Database=ATENEO;Trusted_Connection=True;TrustServerCertificate=True"
+    "UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=ATENEO;Trusted_Connection=True;TrustServerCertificate=True"
     //"DefaultConnection": "Server=localhost;Database=MyDatabase;User Id=myuser;Password=mypassword;"
   }
 }
