Navbar fixes AreaStudenti

--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -5,11 +5,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
-    }
-  },
+  //  "AllowedHosts": "*",
+  //  "ConnectionStrings": {
+  //      "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
+  //  }
+  //},
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019\\\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
