--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -1,13 +1,14 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019\\\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+    "UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
+ //"DefaultConnection": "Server=nome_server\\nome_istanza;Database=nome_database;User Id=nome_utente;Password=password;TrustServerCertificate=True;MultipleActiveResultSets=true"
