--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
+    "ConnectionStrings": {
 
-    "UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+        "UniGenConn": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
