--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -7,8 +7,8 @@
   },
 
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+    "ConnectionStrings": {
+        "UniGenConn": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
  //"DefaultConnection": "Server=nome_server\\nome_istanza;Database=nome_database;User Id=nome_utente;Password=password;TrustServerCertificate=True;MultipleActiveResultSets=true"
