Edit da completare

--- a/AreaDocente/appsettings.json
+++ b/AreaDocente/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "UniGenConn": "Server=DESKTOP-705G4DM\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
-  }
+    "ConnectionStrings": {
+        "UniGenConn": "Server=DESKTOP-H7NJUDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
