Completata pagina Esami/Docenti
leggi su

--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -8,6 +8,6 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         //"DefaultConnection": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;",
-        "DefaultConnection": "Server=FEFOPC11\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "Server=THECROW\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
     }
 }
