modifica descrizione immagine

--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
+        "UniGenConn": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True;"
 
     }
 }
