Aggiustazione modifica materialis

--- a/AreaDocente/appsettings.json
+++ b/AreaDocente/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "UniGenConn": "Server=DESKTOP-H7NJUDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
-    }
+  "ConnectionStrings": {
+    "UniGenConn": "Server=DESKTOP-92I8GDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
