--- a/AreaDocente/appsettings.json
+++ b/AreaDocente/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
-    //"UniGenConn": "Server=DESKTOP-BH7MEAN\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
-    "UniGenConn": "Server=DESKTOP-92I8GDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+    "UniGenConn": "Server=DESKTOP-BH7MEAN\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+    //"UniGenConn": "Server=DESKTOP-92I8GDF\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
