--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -8,8 +8,8 @@
     "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    //"UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
-    "UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True;"
+    "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
+    //"UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True;"
 
 
 
