--- a/Comunicazioni/appsettings.Development.json
+++ b/Comunicazioni/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+
     }
-  }
 }
