--- a/Comunicazioni/appsettings.json
+++ b/Comunicazioni/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MyConn": "Server=DESKTOP-634K0TM\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
+        "MyConn": "Server=5.134.124.100\\MSSQLSERVER2019;Initial Catalog=GENERATION;User ID=generation;Password=G3n3rat!on;"
     }
 }
