stringhe di connessione

--- a/AreaDocente/appsettings.json
+++ b/AreaDocente/appsettings.json
@@ -9,6 +9,6 @@
     "ConnectionStrings": {
         //"UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
         //"UniGenConn": "Server=DESKTOP-BH7MEAN\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
-        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Initial Catalog=GENERATION;User ID=generation;Password=G3n3rat!on;"
+        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User ID=generation;Password=G3n3rat!on;TrustServerCertificate=True"
     }
 }
