--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -1,15 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
+    //"ConnectionStrings": {
+    //    //"DefaultConnection": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;",
+
+    //    "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User ID=generation;Password=G3n3rat!on;TrustServerCertificate=True;"
+
+
+    //}
     "ConnectionStrings": {
-        //"DefaultConnection": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;",
-
-        "UniGenConn": "5.134.124.100\\MSSQLSERVER2019;Initial Catalog=GENERATION;User ID=generation;Password=G3n3rat!on;"
-
+        "UniGenConn": "Data Source=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;"
     }
 }
