--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -14,6 +14,6 @@
 
     //}
     "ConnectionStrings": {
-        "UniGenConn": "Data Source=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;"
+        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;"
     }
 }
