--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -7,7 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        //"DefaultConnection": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;",
-        "DefaultConnection": "Server=DESKTOP-AJMIIN7\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;"
+        //"DefaultConnection": "Server=DESKTOP-Q301G6O\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
     }
 }
