--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UniGen_Prova_Conn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
+    "UniGenConn": "Server=FABIO\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True;"
 
   }
 }
