--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -9,7 +9,7 @@
     "ConnectionStrings": {
         //"DefaultConnection": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=true;",
 
-        "DefaultConnection": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "Server=LAPTOP-7G28UR81\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
 
     }
 }
