--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -9,7 +9,7 @@
     "ConnectionStrings": {
 
 
-        "DefaultConnection": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
+        "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=true;TrustServerCertificate=true;"
 
 
     }
