layout adjusted to modificaprofilo

--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -10,9 +10,9 @@
 
 
     "ConnectionStrings": {
-        "UniGenConn": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True;"
+        "UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
 
 
-  }
+    }
 
 }
