--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -7,8 +7,8 @@
     },
     "AllowedHosts": "*",
 
-    "ConnectionStrings": {       
-        "DefaultConnection": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
 
 
     }
