--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -6,13 +6,8 @@
         }
 
     },
-    "AllowedHosts": "*",
+    "AllowedHosts": "*"
 
 
-    "ConnectionStrings": {
-        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019\\\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True"
-
-
-    }
 
 }
