--- a/AreaPubblica/appsettings.json
+++ b/AreaPubblica/appsettings.json
@@ -7,8 +7,8 @@
     },
     "AllowedHosts": "*",
 
-    "ConnectionStrings": {   
-        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=True"
+    "ConnectionStrings": {
+        "UniGenConn": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
 
 
     }
