--- a/AreaStudente/appsettings.json
+++ b/AreaStudente/appsettings.json
@@ -9,7 +9,7 @@
 
 
     "ConnectionStrings": {
-        "UniGenConn": "Server=5.134.124.100\\MSSQLSERVER2019;Database=GENERATION;User Id=generation;Password=G3n3rat!on;TrustServerCertificate=True"
+        "UniGenConn": "Server=BARBARA\\SQLEXPRESS;Database=UniGen_Prova;Trusted_Connection=True;TrustServerCertificate=True"
 
     }
 
