--- a/AreaStudente/appsettings.Development.json
+++ b/AreaStudente/appsettings.Development.json
@@ -5,14 +5,7 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
+    "AllowedHosts": "*"
 
-    "ConnectionStrings": {
-        //"UniGenConn": "Server=DESKTOP-0E2GJI9\\SQLEXPRESS;Database=GENERATION;Trusted_Connection=True;TrustServerCertificate=True;"
-        "UniGenConn": "Data source=5.134.124.100\\MSSQLSERVER2019;Initial Catalog=GENERATION;User ID=generation;Password=G3n3rat!on;"
-
-
-
-
-    }
+    
 }
