--- a/AreaAmministrazione/Web.config
+++ b/AreaAmministrazione/Web.config
@@ -4,11 +4,24 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
+  </appSettings>
   <connectionStrings>
     <add name="GENERATIONConnectionString" connectionString="Data Source=ANASTASIA-SACC\MSSQLSERVER01;Initial Catalog=GENERATION;Integrated Security=True;TrustServerCertificate=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <httpHandlers>
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        validate="false" />
+    </httpHandlers>
+    <pages>
+      <controls>
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      </controls>
+    </pages>
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
         <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -18,14 +31,12 @@
   </system.web>
 
 	<system.webServer>
-		<handlers>
-			<add name="ChartImageHandler"
-				 preCondition="integratedMode"
-				 verb="GET,HEAD"
-				 path="ChartImg.axd"
-				 type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-		</handlers>
-	</system.webServer>
+  <handlers>
+   <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD"
+    path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+  </handlers>
+  <validation validateIntegratedModeConfiguration="false" />
+ </system.webServer>
 	
 	
 </configuration>
